--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -87,6 +87,7 @@
 
     "home_eighth": {
         "home_eighth_title": "Получите информацию первыми",
+        "home_eighth_request_title": "Получите первыми информацию о новых объектах",
         "home_eighth_email_required_error": "Пожалуйста, введите вашу электронную почту",
         "home_eighth_email_label": "Введите свой email",
         "home_eighth_email_invalid_error": "Пожалуйста, введите действительную электронную почту",
@@ -211,5 +212,51 @@
         "join_first_title": "Присоединиться <br /> к Azur Life",
         "join_first_subtitle": "Azur Life",
         "join_first_description": "Станьте участником Azur Life. Заполните форму ниже, что бы мы могли узнать вас получше."
+    },
+
+    "buy-sell-rent_first": {
+        "buy-sell-rent_first_title": "Купить, продать, арендовать",
+        "buy-sell-rent_first_subtitle": "Вместе с Azur Life",
+        "buy-sell-rent_first_description": "Azur Life расширит горизонты операций с недвижимостью во Франции. Неважно, что необходимо Вам сегодня: продажа апартаментов или приобретение новой недвижимости, вместе с Azur Life этот процессбудет быстрым."
+    },
+
+    "buy-sell-rent_second": {
+        "buy-sell-rent_second_title": "Узнайте",
+        "buy-sell-rent_second_advantage_button_buy": "Преимущества покупки",
+        "buy-sell-rent_second_advantage_button_sell": "Преимущества продажи",
+        "buy-sell-rent_second_advantage_button_rent": "Преимущества аренды"
+    },
+
+    "buy-sell-rent_third": {
+        "buy-sell-rent_third_title_buy": "Купить",
+        "buy-sell-rent_third_description_buy": "Эксклюзивный выбор апартаментов во Франции. Для того чтобы выбрать лучший объект недвижимости, нужно сделать только одно - довериться нам. Свяжитесь с нами, чтобы подобрать предпочтительный вариант из перечня локаций и пространств.",
+        "buy-sell-rent_third_title_sell": "Продать",
+        "buy-sell-rent_third_description_sell": "Осуществить продажу недвижимости во Франции можно легко: обратитесь к менеджерам Azur Life, чтобы урегулировать все административные формальности, связанные с вашей недвижимостью.",
+        "buy-sell-rent_third_title_rent": "Арендовать",
+        "buy-sell-rent_third_description_rent": "Azur Life предоставляет опцию полного сопровождения сделки аренды. Мы выберем премиальные виллы и апартаменты под Ваш запрос без комиссии и дополнительных наценок. Всё, что вам нужно сделать - озвучить Ваши предпочтения.",
+        "buy-sell-rent_third_contact": "Свяжитесь с нами или",
+        "buy-sell-rent_third_button": "Оставьте запрос",
+        "buy-sell-rent_third_link": "Узнать больше"
+    },
+
+    "buy-sell-rent_advantage": {
+        "buy-sell-rent_advantage_buy_title": "Преимущества покупки с Azur Life",
+        "buy-sell-rent_advantage_rent_title": "Преимущества аренды с Azur Life",
+        "buy-sell-rent_advantage_sell_title": "Преимущества продажи недвижимости с нами",
+        "buy-sell-rent_advantage_buy_first_subtitle": "удаленная сделка",
+        "buy-sell-rent_advantage_buy_first_description": "Покупка недвижимости на Вашем языке. Опытные сотрудники Azur Life сопровождают клиентов на протяжении всего пути реализации сделки с легкостью во взаимодействии.",
+        "buy-sell-rent_advantage_buy_second_description": "Покупка недвижимости станет для Вас приятным времяпрепровождением. Мы организуем Ваше пребывание во Франции во время покупки объекта так, чтобы это было легко, приятно и удобно для Вас.",
+        "buy-sell-rent_advantage_buy_third_description": "Покупка недвижимости происходит без дополнительных наценок и комиссий, а выбор объектов осуществляется из премиальной базы недвижимости, чтобы подобрать вариант, который лучше всего будет подходить Вам",
+        "buy-sell-rent_advantage_rent_first_subtitle": "экспертное сопровождение любой сделки",
+        "buy-sell-rent_advantage_rent_second_subtitle": "проверенная база недвижимости",
+        "buy-sell-rent_advantage_rent_third_subtitle": "полный спектр услуг",
+        "buy-sell-rent_advantage_rent_first_description": "Аренда  недвижимости осуществляется легко и последовательно. Для оказания качественных услуг в сфере недвижимости, мы имеем все необходимые лицензии, страховые и финансовые гарантии, требуемые французским законодательством.",
+        "buy-sell-rent_advantage_rent_second_description": "Azur Life является членом Национальной Федерации Агентов Недвижимости (FNAIM) и имеет допуск к обширной базе объектов недвижимости по всей Франции. Это дает возможность выбирать уникальные объекты на тот срок, который будет удобен именно Вам.",
+        "buy-sell-rent_advantage_rent_third_description": "Мы организуем консьерж-сервис и управление арендованной недвижимостью, чтобы проживание в выбранном объекте приносило только удовольствие.",
+        "buy-sell-rent_advantage_sell_first_subtitle": "знание рынка",
+        "buy-sell-rent_advantage_sell_second_subtitle": "360°",
+        "buy-sell-rent_advantage_sell_first_description": "Благодаря многолетней работе в данной сфере и накопленному опыту мы способны быстро и легко осуществить сделку по продаже недвижимости: найдем покупателя, определим выгодную для Вас стоимость недвижимости  и оформим все документы.",
+        "buy-sell-rent_advantage_sell_second_description": "360° обслуживание клиента. Мы берем на себя ответственность за ведение сделки, а также оформляем все документы, требуемые французским законодательством при продаже недвижимости. Также мы организуем Ваше пребывание во Франции во время заключения сделки.",
+        "buy-sell-rent_advantage_sell_third_description": "Продажа недвижимости на Вашем языке. Опытные сотрудники Azur Life сопровождают клиентов на протяжении всего пути реализации сделки с легкостью во взаимодействии с Вами."
     }
 }
