--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -258,5 +258,28 @@
         "buy-sell-rent_advantage_sell_first_description": "Благодаря многолетней работе в данной сфере и накопленному опыту мы способны быстро и легко осуществить сделку по продаже недвижимости: найдем покупателя, определим выгодную для Вас стоимость недвижимости  и оформим все документы.",
         "buy-sell-rent_advantage_sell_second_description": "360° обслуживание клиента. Мы берем на себя ответственность за ведение сделки, а также оформляем все документы, требуемые французским законодательством при продаже недвижимости. Также мы организуем Ваше пребывание во Франции во время заключения сделки.",
         "buy-sell-rent_advantage_sell_third_description": "Продажа недвижимости на Вашем языке. Опытные сотрудники Azur Life сопровождают клиентов на протяжении всего пути реализации сделки с легкостью во взаимодействии с Вами."
+    },
+
+    "expertise_first": {
+        "expertise_first_title": "Экспертная оценка",
+        "expertise_first_title_span": "недвижимости",
+        "expertise_first_description": "Экспертная оценка жилья может понадобиться при взятии кредита в банке или при наследовании жилья. Для того чтобы оградить Вас от взаимодействия с государственными органами, мы сами проводим экспертную оценку имущества и определяем рыночную стоимость недвижимости."
+    },
+
+    "feedback": {
+        "feedback_title_default": "Оставьте свою заявку",
+        "feedback_title_expertise": "запросите экспертизу",
+        "feedback_title_concierge": "Оставьте запрос на консьерж сервис",
+        "feedback_subtitle": "Напишите нам или",
+        "feedback_form_name_placeholder": "Имя",
+        "feedback_form_name_error": "Пожалуйста, введите ваше имя",
+        "feedback_form_phone_placeholder": "Телефон",
+        "feedback_form_phone_error": "Пожалуйста, введите ваш номер телефона",
+        "feedback_form_email_required_error": "Пожалуйста, введите вашу электронную почту",
+        "feedback_form_email_invalid_error": "Пожалуйста, введите действительную электронную почту",
+        "feedback_form_text_placeholder": "Текст сообщения",
+        "feedback_form_text_required_error": "Пожалуйста, введите сообщение",
+        "feedback_form_privacy": "Оставляя свой email, я принимаю политику конфиденциальности.",
+        "feedback_form_submit_button": "Отправить"
     }
 }
