--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -286,5 +286,34 @@
         "feedback_form_text_required_error": "inserisci un messaggio",
         "feedback_form_privacy": "Lasciando la mia email, accetto l'Informativa sulla privacy.",
         "feedback_form_submit_button": "Invia"
+    },
+
+    "property_first": {
+        "property_first_title": "Consegnaci la proprietà in Francia",
+        "property_first_subtitle": "& goditi i momenti davvero importanti",
+        "property_first_description": "Per non distrarti da ciò che è veramente importante, creiamo condizioni speciali di comfort e cura per te. Forniamo la pulizia della tua proprietà, pagheremo le bollette, prepareremo un appartamento o una villa per il tuo arrivo o lo affitteremo se necessario. Abbiamo tutte le licenze e i documenti necessari per farlo in modo efficiente e rapido.",
+        "property_first_button": "Lascia richiesta"
+    },
+
+    "experience_block": {
+        "experience_block_subtitle_property": "Gestisci la tua proprietà",
+        "experience_block_subtitle_concierge": "Servizio di portineria con un approccio speciale"
+    },
+
+    "property_concierge": {
+        "property_concierge_property_title": "Gestione della proprietà",
+        "property_concierge_concierge_title": "Servizio di portineria con un approccio speciale",
+        "property_concierge_property_tag1": "In affitto/vendita",
+        "property_concierge_property_tag2": "Pulizia",
+        "property_concierge_property_tag3": "Pagamento delle bollette",
+        "property_concierge_property_tag4": "Preparazione per l'arrivo",
+        "property_concierge_concierge_tag1": "Trasferimenti",
+        "property_concierge_concierge_tag2": "Acquisto di oggetti su richiesta",
+        "property_concierge_concierge_tag3": "Prenotazione biglietti",
+        "property_concierge_concierge_tag4": "Selezione di ristoranti",
+        "property_concierge_property_subtitle": "Approccio individuale e trattamento speciale",
+        "property_concierge_property_description": "Pagheremo le bollette o prepareremo l'appartamento per l'arrivo.  Affittiamo la tua proprietà o prenotiamo la pulizia dello spazio: scegli quello che ti serve.",
+        "property_concierge_concierge_description": "I nostri clienti sono soddisfatti grazie al loro particolare approccio e attenzione ai dettagli e alle richieste. Tutto ciò che serve per il viaggio perfetto dei clienti di Azur life sarà organizzato per te.",
+        "property_concierge_submit_button": "Lascia la tua richiesta"
     }
 }
